ingress-chart/templates/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-microsvc-argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-dev
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - argocd.goodnesseboh.engineer
    secretName: letsencrypt-monitoring
  rules:
    - host: argocd.goodnesseboh.engineer
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server 
                port:
                  number: 443
