ingress-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-microsvc-ingress
  namespace: multi-microsvc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
spec:
  ingressClassName: nginx
  rules:
    - host: msvc.goodnesseboh.engineer
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
  tls:
    - hosts:
        - msvc.goodnesseboh.engineer
      secretName: letsencrypt-microsvc
